...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/id_delete_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_modify_request"
            app:srcCompat="@drawable/ic_clear"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/id_request_status"
...
