...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            />
        <ImageButton
            android:id="@+id/id_change_request_status_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_right_arrow"
            android:background="@null"
            android:layout_marginStart="8dp"
            />
...
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_title">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/id_recycler_staff_item_requests"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
